--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.2"
+        "@fortawesome/fontawesome-free": "^6.5.2",
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-brands-svg-icons": "^6.5.2",
+        "@fortawesome/free-regular-svg-icons": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2"
     }
 }
