--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-collection-macros": "^7.14",
         "spatie/laravel-query-builder": "^6.0",
         "symfony/filesystem": "^7.0"
     },
