--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/tinker": "^2.9",
         "spatie/laravel-collection-macros": "^7.14",
         "spatie/laravel-query-builder": "^6.0",
-        "symfony/filesystem": "^7.0"
+        "symfony/filesystem": "^7.0",
+        "unisharp/laravel-filemanager": "^2.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
