--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "spatie/laravel-collection-macros": "^7.14",
+        "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-query-builder": "^6.0",
         "symfony/filesystem": "^7.0",
         "unisharp/laravel-filemanager": "^2.9"
