--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "spatie/laravel-collection-macros": "^7.14",
         "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-query-builder": "^6.0",
-        "symfony/filesystem": "^7.0",
-        "unisharp/laravel-filemanager": "^2.9"
+        "symfony/filesystem": "^7.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
