--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-brands-svg-icons": "^6.5.2",
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
-        "@fortawesome/free-solid-svg-icons": "^6.5.2"
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "ckeditor5": "^42.0.1"
     }
 }
