--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "spatie/laravel-collection-macros": "^7.14",
         "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-query-builder": "^6.0",
+        "spatie/laravel-sitemap": "^7.2",
         "symfony/filesystem": "^7.0"
     },
     "require-dev": {
